# rl4nlk_updated

./: .gitignore
NLK/: Untitled.ipynb
NLK/Analysis/: Zone_array_save4.npy  Zone_array_test.npy  Ztwo_array_save4.npy  Ztwo_array_test.npy  analyze_behaviour_round_to_round.ipynb  comparison_to_thscsi.ipynb  creating_stochasticity_and_kicker_noise_analysis.ipynb  effect_on_stored_ring.ipynb  finding_optimal_kickerstrength.ipynb  optimal_reward_given_env.ipynb  plot_magnetic_field_strength.ipynb  rounds_survived_without_kick.ipynb  strength_NLK_equals_noise.ipynb
NLK/Analysis/.ipynb_checkpoints/: analyze_behaviour_round_to_round-checkpoint.ipynb
NLK/ModelsAndTraining/: nlk1000_gym_onestep.py
NLK/particle_propagation/: MANIFEST.in  setup.cfg  setup.py
NLK/particle_propagation/interfaces/: __init__.py  propagator_interface.py
NLK/particle_propagation/model/: action_space.py  noise.py  observation_space.py
NLK/particle_propagation/particle_propagation/: Untitled.ipynb  __init__.py  approx_propagation.py  new_particle_propagation.py  particle_propagation-Copy1.py  particle_propagation-Copy3.py  particle_propagation-Copy4.py  particle_propagation.py  particle_propagation_old.py  testing_particle_propagation.py  thorscsi_propagation.py
NLK/particle_propagation/particle_propagation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
NLK/particle_propagation/particle_propagation/package_files/: BII_NLKmode_3d_start.lat
NLK/particle_propagation/particle_propagation/particle_propagation/: particle_propagation-Copy1.py  particle_propagation-Copy2.py
