# -*- coding: utf-8 -*-

[metadata]
name = particle_propagation
fullname = Particle Propagation at BESSY II
version = 0.1.0
#url = https://github.com/hz-b/bact-archiver
author = Alexander Schütt
author_email = alexander.schuett@helmholtz-berlin.de
description = Module for particle propagation at BESSY II
#long_description = file: README.rst
classifiers =
	 Development Status :: 4 - Beta
         Intended Audience :: Science/Research
         License :: OSI Approved :: GNU General Public License (GPL)
         Programming Language :: Python :: 3
         Topic :: Scientific/Engineering :: Physics
[build-system]
requires = setup_tools


[options]
packages = find:
# install_requires = cython
requires = numpy scipy.special
# zip_safe = False
